large movie card overflow fix

--- a/stylesheets/large_card.css
+++ b/stylesheets/large_card.css
@@ -61,7 +61,7 @@
   height: 100%;
   padding: 1rem;
   z-index: 3;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 @media only screen and (max-width: 992px) {
   .large_card__text_container {
